--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -241,8 +241,7 @@ a:hover {
     position: fixed;
     top: 0;
     right: 0;
-    width: 280px;
-    max-width: 85vw;
+    width: 100%;
     height: 100vh;
     background: white;
     z-index: 201;
